@@ -50,6 +50,7 @@
 #define librc_hidden_def(x) hidden_def(x)
 
 librc_hidden_proto(rc_allow_plug)
+librc_hidden_proto(rc_env_bool)
 librc_hidden_proto(rc_exists)
 librc_hidden_proto(rc_filter_env)
 librc_hidden_proto(rc_find_pids)
@@ -64,7 +65,6 @@ librc_hidden_proto(rc_get_runlevel)
 librc_hidden_proto(rc_get_runlevels)
 librc_hidden_proto(rc_get_service_option)
 librc_hidden_proto(rc_is_dir)
-librc_hidden_proto(rc_is_env)
 librc_hidden_proto(rc_is_exec)
 librc_hidden_proto(rc_is_file)
 librc_hidden_proto(rc_is_link)
