@@ -1,6 +1,11 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2
 
+  26 Sep 2007; Roy Marples <uberlord@gentoo.org>:
+
+    rc_is_env is now rc_env_bool and just works with boolean values.
+    errno is set when it's not a boolean or does not exist.
+
   25 Sep 2007; Mike Frysinger <vapier@gentoo.org>:
 
     Skip consolefont setup when RC_TTY_NUMBER is set to 0.
